tox.ini: add flake8 config
Signed-off-by: Jerome Flesch <jflesch@openpaper.work>

--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,12 @@ envlist=py27,py3
 [testenv]
 deps=nose
 commands=nosetests
+
+[flake8]
+exclude =
+    .tox,
+    build,
+    dist,
+    venv*,
+    *.egg-info,
+    .git,
